Fixed font colour on dark mode

--- a/css/contact.module.css
+++ b/css/contact.module.css
@@ -53,6 +53,7 @@
   font-weight: 500;
   margin-bottom: 3rem;
   text-align: center;
+  color:#111f44;
 }
 
 /* Form Elements */
